@@ -1,4 +1,4 @@
-#ident "$Id: lookup_hesiod.c,v 1.11 2006/03/01 15:52:21 raven Exp $"
+#ident "$Id: lookup_hesiod.c,v 1.12 2006/03/11 06:02:48 raven Exp $"
 /*
  * lookup_hesiod.c
  *
@@ -11,7 +11,6 @@
 #include <ctype.h>
 #include <limits.h>
 #include <string.h>
-#include <syslog.h>
 #include <unistd.h>
 #include <stdlib.h>
 #include <netinet/in.h>
