@@ -1,4 +1,4 @@
-#ident "$Id: lookup_ldap.c,v 1.30 2006/03/03 21:48:23 raven Exp $"
+#ident "$Id: lookup_ldap.c,v 1.31 2006/03/11 06:02:48 raven Exp $"
 /*
  * lookup_ldap.c - Module for Linux automountd to access automount
  *		   maps in LDAP directories.
@@ -21,7 +21,6 @@
 #include <sys/types.h>
 #include <ctype.h>
 #include <string.h>
-#include <syslog.h>
 #include <unistd.h>
 #include <stdlib.h>
 #include <time.h>
